[package]
name = "internet_archive"
version = "0.1.2"
edition = "2021"
license = "BSD-4-Clause"
description = "Unofficial archive.org library."
homepage = "https://github.com/gfriloux/internetarchive"
repository = "https://github.com/gfriloux/internetarchive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.163"
serde_json = "1.0.96"
snafu = "0.7.4"
reqwest = { version = "0.11.18", features = ["blocking"] }
urlencoding = "2.1.2"

[dev-dependencies]
dotenv = "0.15.0"
