[package]
name = "internet_archive"
version = "0.2.0"
edition = "2021"
license = "BSD-4-Clause"
description = "Unofficial archive.org library."
homepage = "https://github.com/gfriloux/internetarchive"
repository = "https://github.com/gfriloux/internetarchive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
snafu = "0.7.4"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "rustls-tls"] }
urlencoding = "2.1.2"

[dev-dependencies]
dotenv = "0.15.0"
